--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/bootstrap-theme.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/animations.css">
+    <!-- Mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Simple Style -->
     <link href="assets/css/style.css" rel="stylesheet">
-    <!-- Mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=3">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -31,7 +31,7 @@
     <body>
         <div id="wrapper">
             <!-- Section 1-->
-            <div class="contanier col-sm-12 col-md-12 col-lg-12" style="margin-top: 100px; margin-bottom: 100px">                 
+            <div class="contanier col-sm-12 col-md-12 col-lg-12" style="margin-top: 100px; margin-bottom: 100px">             
                 <!-- Section A-->
                 <div class="container col-sm-12 col-md-12 col-lg-4">
                     <a href="http://ozoneops.com"><img src="assets/img/OzoneLogoBig.png" alt="Ozone" class="top-logo" ></a>
@@ -54,9 +54,9 @@
                         </p>
                     </div> -->
             </div>
-            <hr>
             <!-- Section 2-->
             <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
+            <hr>
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h3 class="subtitle" style="margin-top: 20px; padding-left: 30px; padding-right: 30px">STRAIGHTFOWARD</h3>
                     <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We are a company with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
@@ -66,9 +66,9 @@
                     <img src="assets/img/DevOps.png" alt="DevOps">
                 </div> 
             </div>
-            <hr>
             <!-- Section 3-->
             <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
+            <hr>
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h3 class="subtitle" style="margin-top: 20px; padding-left: 30px; padding-right: 30px">BEYOND</h3>
                     <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
@@ -88,21 +88,18 @@
                     <h3 class="subtitle" style="color: grey">Agile & Maturity modeling</h3>
                 </div>
             </div>
-        </div>
-    </div>
-    </div>
-    <hr>
-    <div class="row" >
-        <!-- <div class="align-center" style="text-align: -webkit-center">
-            
-            <h3><i class="fa fa-contact"></i> CONTACT </h3>
-            <h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1   877   862   9615  </a><h4>
-            <h4><i class="fa fa-envelope"></i><a href="mailto:hello@ozoneops.com">  hello@ozoneops.com  </a><h4>
-        </div> -->
-        <div class="align-center" style="text-align: -webkit-center; padding-bottom: 50px">
-            <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a></p>
-        </div> 
-    </div>
+            <!-- Section Last-->
+            <div class="containercol-sm-12 col-md-12 col-lg-12" style="margin-top: 25px" >
+                <!-- <div class="align-center" style="text-align: -webkit-center">
+                    <h3><i class="fa fa-contact"></i> CONTACT </h3>
+                    <h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1   877   862   9615  </a><h4>
+                    <h4><i class="fa fa-envelope"></i><a href="mailto:hello@ozoneops.com">  hello@ozoneops.com  </a><h4>
+                </div> -->
+                <hr>
+                <div class="align-center" style="text-align: -webkit-center">
+                    <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a></p>
+                </div> 
+            </div>
     <!-- Cloud
      <div class="cloud floating">
         <img src="assets/img/cloud.png" alt="Ozone">
@@ -116,12 +113,9 @@
      <div class="cloud pos3 fliped floating">
         <img src="assets/img/cloud.png" alt="Ozone">
      </div> -->
-</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
-
-<script>
-        
+<script> 
 $(document).ready( function () {
     $('#wrapper').height($(document).height());
     // I only have one form on the page but you can be more specific if need be.
