--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Automation & Orchestration</h3>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-6">
-                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Data Analitics</h3>
+                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Big Data Analytics</h3>
                     </div> 
             </div>
             <!-- Section Last-->
